# qrcode-generator

./: LICENSE  README.md  app.py  pyproject.toml
